@@ -1,4 +1,7 @@
 <?xml version="1.0"?>
 <metadata>
   <version>1000</version>
+  <dependencies>
+		<dependency>profile-Products.CMFPlacefulWorkflow:CMFPlacefulWorkflow</dependency>
+  </dependencies>
 </metadata>
