@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="portal_placeful_workflow" meta_type="Placeful Workflow Tool">
+ <object name="groupware" meta_type="WorkflowPolicy"/>
+</object>
