@@ -4,7 +4,7 @@
  <object name="groupware_forum_workflow" meta_type="Workflow"/>
  <object name="groupware_conversation_workflow" meta_type="Workflow"/>
  <object name="groupware_comment_workflow" meta_type="Workflow"/>
- <bindings>
+ <!--bindings>
   <default>
    <bound-workflow workflow_id="groupware_workflow"/>
   </default>
@@ -23,5 +23,5 @@
   <type type_id="PloneboardComment">
   	<bound-workflow workflow_id="groupware_comment_workflow" />
   </type>
- </bindings>
+ </bindings-->
 </object>
